#85773 presets buttons align left fixed

--- a/src/nginxconfig/scss/_panel.scss
+++ b/src/nginxconfig/scss/_panel.scss
@@ -38,7 +38,6 @@ THE SOFTWARE.
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: space-between;
     }
 
     .header-group {
@@ -60,8 +59,6 @@ THE SOFTWARE.
     }
 
     .buttons-group {
-      align-items: center;
-
       .button {
         margin: 0 .25rem .5rem;
 
